# digits_recognition

./: .gitignore  README.md  diff.txt  pyproject.toml  ruff.toml
notebooks/: .gitattributes  experiments.ipynb  inference.ipynb
src/digits_recognition/server/: config.py  server.py
tests/: unit_tests.py
