[project]
name = "digits-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Farah Mohamed",email = "fxrxhmohamed@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "digits_recognition", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
prod = [
    "scikit-learn (>=1.7.2,<2.0.0)"
]
dev = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "fastapi[standard] (>=0.121.0,<0.122.0)"
]
